Updates to setup and signup instruction for each sample

--- a/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
+++ b/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
@@ -7,12 +7,14 @@
    "source": [
     "# Transformed Temporal Similarity Search\n",
     "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "Transformed Temporal Similarity Search is our patent-pending compression model designed to dimensionally reduce time series windows by more than 99%. With Transformed Temporal Similarity Search, KDB.AI can compress times series windows containing thousands of data points, into significantly smaller dimensions, all while maintaining the integrity of the original data’s shape. These compressed windows are then stored within KDB.AI as vector embeddings, setting up the ability to execute vector searches and enabling the efficient analysis of time series datasets.\n",
     "\n",
     "This notebook uses sample market data, creates an index using the Transformed Temporal Similiarity Search feature exposed by KDB.AI, and searches for a pattern of interest in the data.\n",
     "\n",
     "Agenda:\n",
-    "1. Imports & Setup\n",
+    "1. Dependencies, Imports & Setup\n",
     "2. Define KDB.AI Session\n",
     "3. Generate Synthetic Market Time Series Data\n",
     "4. Method 1: Only Windowing\n",
@@ -26,7 +28,14 @@
    "id": "1c3db7ad",
    "metadata": {},
    "source": [
-    "## 1. Imports & Setup"
+    "## 1. Dependencies, Imports & Setup\n",
+    "\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
