--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Semantic Search on PDF Documents\n",
     "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "This example demonstrates how to use KDB.AI to run semantic search on unstructured text documents. \n",
     "\n",
     "Semantic search allows users to perform searches based on the meaning or similarity of the data rather than exact matches. It works by converting the query into a vector representation and then finding similar vectors in the database. This way, even if the query and the data in the database are not identical, the system can identify and retrieve the most relevant results based on their semantic meaning.\n",
@@ -14,11 +16,11 @@
     "### Aim\n",
     "In this tutorial, we'll walk you through the process of performing semantic search on documents, taking PDFs as example, using KDB.AI as the vector store. We will cover the following topics:\n",
     "\n",
-    "1. Load PDF Data\n",
+    "0. Load PDF Data\n",
     "1. Create Sentence Vector Embeddings\n",
-    "1. Store Embeddings in KDB.AI\n",
-    "1. Search For Similar Sentences To A Target Sentence\n",
-    "1. Delete the KDB.AI Table\n",
+    "2. Store Embeddings in KDB.AI\n",
+    "3. Search For Similar Sentences To A Target Sentence\n",
+    "4. Delete the KDB.AI Table\n",
     "\n",
     "---"
    ]
@@ -38,9 +40,12 @@
    "source": [
     "### Install dependencies \n",
     "\n",
-    "In order to successfully run this sample, the [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` file must be completed.\n",
-    "This will ensure that you have installed all of the relevant packages and versions needed for this sample.\n",
-    "If you have not completed these setup steps, please navigate to the repositories `README.md` file and follow the steps detailed there."
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
