--- a/hybrid_search/hybrid_search_inflation.ipynb
+++ b/hybrid_search/hybrid_search_inflation.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "## Hybrid Search\n",
+    "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "KDB.AI hybrid search is a method of similarity search to increase the relevancy of results retrieved from the vector database. It combines two search methods: sparse vector search, and dense vector search.\n",
     "\n",
     "Sparse vector search uses the BM25 algorithm to find the most relevant keyword matches, while dense vector search finds the most semantically relevant matches. \n",
@@ -14,7 +17,7 @@
     "In this sample we will use hybrid search over a Federal Reserve speech to extract chunks of the speech that are similar to a user's prompt. In this notebook we will chunk up the document into smaller subsections, create sparse and dense vectors of the chunks, store the vectors in the KDB.AI vector database, and then run dense search, sparse search, and hybrid search to retrieve the most relevant chunks to a user's query. \n",
     "\n",
     "Agenda:\n",
-    "1. Imports & Setup\n",
+    "1. Dependencies, Imports & Setup\n",
     "2. Ingest & Chunk Data\n",
     "3. Generate Sparse & Dense Vectors for Each Chunk\n",
     "4. Define KDB.AI Session\n",
@@ -30,7 +33,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Imports & Setup"
+    "## 1. Dependencies, Imports & Setup\n",
+    "\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
