--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Image Search on Brain MRI Scans\n",
     "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "This example demonstrates how to store [brain scan images](https://www.kaggle.com/datasets/sartajbhuvaji/brain-tumor-classification-mri) as vector embeddings in KDB.AI, then how to search this dataset to instantly retrieve similar images.\n",
     "\n",
     "Brain tumors are intricate due to variations in size and location, therefore understanding their nature is challenging. Professional neurosurgeons are essential for accurate MRI analysis, but in developing nations, the scarcity of skilled doctors and tumor knowledge results in time-consuming report generation from MRI scans. \n",
@@ -16,12 +18,12 @@
     "### Aim \n",
     "In this tutorial, we'll walk through the process of storing images in a vector database, using a pre-trained neural network to generate data structures known as vector embeddings. We will use KDB.AI's vector database offering to find images with similar vector embeddings to an input query image. We will cover the following topics:\n",
     "\n",
-    "1. Load Image Data\n",
+    "0. Load Image Data\n",
     "1. Create Image Vector Embeddings\n",
-    "1. Store Embeddings in KDB.AI\n",
-    "1. Query the KDB.AI Table\n",
-    "1. Search For Similar Images To A Target Image\n",
-    "1. Delete the KDB.AI Table\n",
+    "2. Store Embeddings in KDB.AI\n",
+    "3. Query the KDB.AI Table\n",
+    "4. Search For Similar Images To A Target Image\n",
+    "5. Delete the KDB.AI Table\n",
     "\n",
     "---"
    ]
@@ -39,7 +41,14 @@
    "id": "1cce6739",
    "metadata": {},
    "source": [
-    "### Install dependencies "
+    "### Install dependencies \n",
+    "\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
