--- a/quickstarts/python_quickstart.ipynb
+++ b/quickstarts/python_quickstart.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Quickstart: Hello, KDB.AI\n",
     "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "How to get started with the KDB.AI vector database. Here, you'll get a quick taste of KDB.AI in  ~10 minutes.\n",
     "\n",
     "You will learn how to:\n",
@@ -32,7 +34,14 @@
    "id": "d1468bd3",
    "metadata": {},
    "source": [
-    "### Install dependencies \n"
+    "### Install dependencies \n",
+    "\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
