--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Retrieval Augmented Generation Evaluation with LangChain and KDB.AI\n",
     "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "This notebook serves as a guide to utilizing LangChain tooling for evaluating a basic Retrieval Augmented Generation (RAG) system. \n",
     "\n",
     "The evaluation process involves employing [LangChain's String Evaluators](https://python.langchain.com/docs/guides/evaluation/string/) to assess both conciseness and correctness. KDB.AI serves as the primary knowledge base, enabling the retrieval of semantically relevant content for the evaluation.\n",
@@ -44,13 +46,13 @@
    "source": [
     "### Install dependencies \n",
     "\n",
-    "In order to successfully run this sample, the [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` file must be completed.\n",
-    "This will ensure that you have installed all of the relevant packages and versions needed for this sample.\n",
-    "If you have not completed these setup steps, please navigate to the repositories `README.md` file and follow the steps detailed there.\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
     "\n",
-    "### Import Packages\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
     "\n",
-    "Load the various libraries that will be needed in this tutorial, including all the langchain libraries we will use."
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells.\n",
+    "\n"
    ]
   },
   {
@@ -74,6 +76,16 @@
     "### This downloads state of the union speech into Colab\n",
     "!mkdir ./data \n",
     "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/retrieval_augmented_generation/data/state_of_the_union.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "679126f7",
+   "metadata": {},
+   "source": [
+    "### Import Packages\n",
+    "\n",
+    "Load the various libraries that will be needed in this tutorial, including all the langchain libraries we will use."
    ]
   },
   {
