--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Retrieval Augmented Generation (RAG) with LangChain\n",
     "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "This example will demonstrate how to use an advanced prompt engineering technique called Retrieval Augmented Generation (RAG), with hands-on examples using Langchain, KDB.AI and various LLMs.\n",
     "\n",
     "### What is RAG and Why Do We Need it?\n",
@@ -44,9 +46,12 @@
    "source": [
     "### Install dependencies \n",
     "\n",
-    "In order to successfully run this sample, the [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` file must be completed.\n",
-    "This will ensure that you have installed all of the relevant packages and versions needed for this sample.\n",
-    "If you have not completed these setup steps, please navigate to the repositories `README.md` file and follow the steps detailed there."
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
