update signup & setup instructions

--- a/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Non-Transformed Temporal Similarity Search\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "Non-Transformed TSS enables near real-time analysis directly upon time series windows without the overhead of extracting and embedding vectors or building a search index. \n",
     "\n",
