--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Semantic Search on PDF Documents\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "This example demonstrates how to use KDB.AI to run semantic search on unstructured text documents. \n",
     "\n",
