--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Multimodal Retrieval Augmented Generation (RAG)\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "This example explores preparing, embedding, and storing both text and image data within a KDB.AI vector database. Our goal is to store both images descriptions and text within the same vector space so we can search over both modalities at the same time. KDB.AI can then be used as a retrieval tool within a RAG pipeline for both text and images data, making it a multimodal retriever. \n",
     "\n",
