--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Music Recommendation on Spotify Data\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "This example demonstrates how you can use KDB.AI to perform similarity recommendations using vector embeddings created from both categorical and numeric music data.\n",
     "\n",
