--- a/pattern_matching/pattern_matching.ipynb
+++ b/pattern_matching/pattern_matching.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Pattern Matching on Sensor Data\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "This example explores the process of conducting pattern matching on time series manufacturing data using a similarity search in KDB.AI. \n",
     "\n",
