--- a/quickstarts/python_quickstart.ipynb
+++ b/quickstarts/python_quickstart.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Quickstart: Hello, KDB.AI\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "How to get started with the KDB.AI vector database. Here, you'll get a quick taste of KDB.AI in  ~10 minutes.\n",
     "\n",
