--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Sentiment Analysis on Disneyland Resort Reviews\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "In this example, we will extract valuable sentiments from Disneyland Resort reviews, gaining a deeper understanding of customer experiences. \n",
     "\n",
