--- a/hybrid_search/hybrid_search_inflation.ipynb
+++ b/hybrid_search/hybrid_search_inflation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Hybrid Search\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "KDB.AI hybrid search is a method of similarity search to increase the relevancy of results retrieved from the vector database. It combines two search methods: sparse vector search, and dense vector search.\n",
     "\n",
