--- a/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
+++ b/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Multimodal Retrieval Augmented Generation (RAG) with ImageBind\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a [KDB.AI account](https://kdb.ai/get-started).\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
     "\n",
     "This example explores preparing, embedding, and storing both text and image data within a KDB.AI vector database. Our goal is to store both images and text within the same vector space so we can search over both modalities at the same time. KDB.AI can then be used as a retrieval tool within a RAG pipeline for both text and images, making it a multimodal retriever. \n",
     "\n",
