Updates to setup and signup instruction for each sample (#29)
* Updates to setup and signup instruction for each sample

* update signup & setup instructions

---------

Co-authored-by: Ryan Siegler <rsiegler@firstderivatives.com>

--- a/metadata_filtering/metadata_filtering_demo.ipynb
+++ b/metadata_filtering/metadata_filtering_demo.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Metadata Filtering with KDB.AI Vector Database\n",
+    "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "#### In this example, we will show how to use metadata filtering in a KDB.AI vector database to increase the speed and accuracy of vector similarity searches.\n",
     "\n",
     "#### Agenda:\n",
@@ -22,7 +25,14 @@
    "metadata": {},
    "source": [
     "## 1. Set Up\n",
-    "Installs, imports, and API Key setup"
+    "#### Installs, imports, and API Key setup\n",
+    "\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
