--- a/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
+++ b/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "## Multimodal Retrieval Augmented Generation (RAG) with ImageBind\n",
+    "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "This example explores preparing, embedding, and storing both text and image data within a KDB.AI vector database. Our goal is to store both images and text within the same vector space so we can search over both modalities at the same time. KDB.AI can then be used as a retrieval tool within a RAG pipeline for both text and images, making it a multimodal retriever. \n",
     "\n",
     "The dataset we are working with contains images of several different animals, and text descriptions of those animals. After implementation, a user should be able to write a query regarding any of these animals and get returned both images and text related to the animal of interest.\n",
@@ -41,7 +44,14 @@
    "metadata": {},
    "source": [
     "## 0. Setup\n",
-    " Install ImageBind requirements and import necessary packages "
+    " Install ImageBind requirements and import necessary packages \n",
+    "\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
