--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Sentiment Analysis on Disneyland Resort Reviews\n",
     "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "In this example, we will extract valuable sentiments from Disneyland Resort reviews, gaining a deeper understanding of customer experiences. \n",
     "\n",
     "We will leverage the power of Natural Language Processing (NLP) and sentiment analysis techniques to assess the sentiment expressed in these reviews. But that's not all, our approach doesn't stop at sentiment analysis; it extends to the realm of powerful vector databases.\n",
@@ -42,7 +44,14 @@
    "id": "91255bcd",
    "metadata": {},
    "source": [
-    "### Install dependencies "
+    "### Install dependencies \n",
+    "\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
