--- a/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
@@ -6,13 +6,16 @@
    "metadata": {},
    "source": [
     "# Non-Transformed Temporal Similarity Search\n",
+    "\n",
+    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
+    "\n",
     "Non-Transformed TSS enables near real-time analysis directly upon time series windows without the overhead of extracting and embedding vectors or building a search index. \n",
     "\n",
     "This feature leads to optimized processing of fast flowing time series datasets without any model dependency. It offers dynamic search capability allowing the identification of patterns and outliers within temporal windows using query vectors of different sized sequences - including accepting multiple query vectors of differing sizes at once. \n",
     "\n",
     "Agenda:\n",
     "\n",
-    "1. Imports & Setup\n",
+    "1. Dependencies, Imports & Setup\n",
     "2. Define KDB.AI Session\n",
     "3. Generate Synthetic Market Time Series Data\n",
     "4. Create KDB.AI Schema & Table\n",
@@ -31,7 +34,14 @@
    "id": "0d242bc0",
    "metadata": {},
    "source": [
-    "### 1. Imports & Setup"
+    "### 1. Dependencies, Imports & Setup\n",
+    "\n",
+    "In order to successfully run this sample, note the following steps depending on where you are running this notebook:\n",
+    "\n",
+    "-***Run Locally / Private Environment:*** The [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` will guide you on prerequisites and how to run this with Jupyter.\n",
+    "\n",
+    "\n",
+    "-***Colab / Hosted Environment:*** Open this notebook in Colab and run through the cells."
    ]
   },
   {
