--- a/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
@@ -61,8 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### !!! Only run this cell if running the notebook in Colab\n",
-    "### This downloads sample market data into Colab\n",
+    "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
+    "### This downloads sample market data\n",
     "!mkdir ./data \n",
     "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/TSS_non_transformed/data/marketTrades.parquet"
    ]
@@ -996,6 +996,8 @@
     "### Dynamic Search\n",
     "A strengh of Non-Transformed Temporal Similarity Search is the ability to change the size (number of data points) of the query vector between searches.\n",
     "This means we do not need to create new embeddings to search over different window sizes.\n",
+    "\n",
+    "See the [documentation](https://code.kx.com/kdbai/reference/non-transformed-tss.html) for more details.\n",
     "\n",
     "In this example, our query vector is reduced to 50 data points from the original 1000 data point query vector:"
    ]
