--- a/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
+++ b/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
@@ -81,8 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### !!! Only run this cell if running the notebook in Colab\n",
-    "### This downloads image and text data into Colab\n",
+    "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
+    "### This downloads image and text data\n",
     "\n",
     "!mkdir -p ./data/images\n",
     "!mkdir -p ./data/text\n",
@@ -161,12 +161,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Install ImageBind dependencies \n",
+    "\n",
+    "!!! In Colab you may need to run this twice if there are issues including with ```mayavi``` - do NOT restart runtime if prompted to.\n",
+    "\n",
+    "If you run into issues with cartopy in your environment, install 'geos' with \n",
+    "```!brew install geos```\n",
+    " or \n",
+    " ```!sudo apt install libgeos-dev```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Install ImageBind dependencies !!! In Colab you may need to run this twice - do NOT restart runtime if prompted to.\n",
     "!pip install ."
    ]
   },
@@ -2369,6 +2382,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define Schema"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -2669,8 +2689,8 @@
     "\n",
     "# Multimodal search function, identifies most relevant images and text within the vector database\n",
     "def mm_search(query):\n",
-    "    image_results = table.search(query_vector, n=2, filter=[(\"=\", \"media_type\", \"image\")])\n",
-    "    text_results = table.search(query_vector, n=1, filter=[(\"=\", \"media_type\", \"text\")])\n",
+    "    image_results = table.search(query, n=2, filter=[(\"=\", \"media_type\", \"image\")])\n",
+    "    text_results = table.search(query, n=1, filter=[(\"=\", \"media_type\", \"text\")])\n",
     "    results = [pd.concat([image_results[0], text_results[0]], ignore_index=True)]\n",
     "    viewResults(results)\n",
     "    return(results)"
