--- a/pattern_matching/pattern_matching.ipynb
+++ b/pattern_matching/pattern_matching.ipynb
@@ -15,6 +15,8 @@
     "- Transformed TSS: [Documentation](https://code.kx.com/kdbai/reference/transformed-tss.html) | [Notebook](https://github.com/KxSystems/kdbai-samples/blob/main/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb)\n",
     "\n",
     "- Non-Transformed TSS: [Documentation](https://code.kx.com/kdbai/use/non-transformed-tss.html) | [Notebook](https://github.com/KxSystems/kdbai-samples/blob/main/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb)\n",
+    "\n",
+    "***Note that this example does not use the new features for highly optimized time series analytics.***\n",
     "</div>\n",
     "\n",
     "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
