--- a/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_Non-Transformed_Demo.ipynb
@@ -1509,6 +1509,23 @@
    "source": [
     "table.drop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "498a63f8",
+   "metadata": {},
+   "source": [
+    "#### Take Our Survey\n",
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "Take the [Survey](https://delighted.com/t/84DkpDWQ)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5e62011",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
