--- a/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
+++ b/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
@@ -853,6 +853,17 @@
         ")\n",
         "print(result.response)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "381ca28b",
+      "metadata": {},
+      "source": [
+        "#### Take Our Survey\n",
+        "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+        "\n",
+        "Take the [Survey](https://delighted.com/t/dfAHRG9R)\n"
+      ]
     }
   ],
   "metadata": {
