--- a/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
+++ b/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
@@ -55,8 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### !!! Only run this cell if running the notebook in Colab\n",
-    "### This downloads sample market data into Colab\n",
+    "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
+    "### This downloads sample market data\n",
     "!mkdir ./data \n",
     "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/TSS_transformed/data/marketTrades.parquet"
    ]
@@ -729,7 +729,6 @@
     "                dict(\n",
     "                    type='flat', \n",
     "                    metric='L2',\n",
-    "                    dims=1000\n",
     "                    ),\n",
     "            embedding=\n",
     "                dict(\n",
@@ -1079,6 +1078,17 @@
    "outputs": [],
    "source": [
     "table.drop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a83b09da",
+   "metadata": {},
+   "source": [
+    "#### Take Our Survey\n",
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "Take the [Survey](https://delighted.com/t/2ENY3DoD)\n"
    ]
   }
  ],
