--- a/hybrid_search/hybrid_search_inflation.ipynb
+++ b/hybrid_search/hybrid_search_inflation.ipynb
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### !!! Only run this cell if running the notebook in Colab\n",
-    "### This downloads Federal Reserve Inflation speech data into Colab\n",
+    "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
+    "### This downloads Federal Reserve Inflation speech data\n",
     "!mkdir ./data \n",
     "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/hybrid_search/data/inflation.txt"
    ]
@@ -1016,6 +1016,17 @@
    ],
    "source": [
     "table.drop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Take Our Survey\n",
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "Take the [Survey](https://delighted.com/t/U2RoT32R)\n",
+    "\n"
    ]
   }
  ],
