--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -68,8 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### !!! Only run this cell if running the notebook in Colab\n",
-    "### This downloads image data into Colab\n",
+    "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
+    "### This downloads image data\n",
     "\n",
     "import requests\n",
     "import os\n",
