--- a/metadata_filtering/metadata_filtering_demo.ipynb
+++ b/metadata_filtering/metadata_filtering_demo.ipynb
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### !!! Only run this cell if running the notebook in Colab\n",
-    "### This downloads movie data into Colab\n",
+    "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
+    "### This downloads movie data\n",
     "!mkdir ./data \n",
     "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/metadata_filtering/data/filtered_embedded_movies.pkl"
    ]
@@ -889,6 +889,16 @@
    "outputs": [],
    "source": [
     "table.drop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Take Our Survey\n",
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "Take the [Survey](https://delighted.com/t/wtS7T4Lg)\n"
    ]
   }
  ],
