--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -82,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### !!! Only run this cell if running the notebook in Colab\n",
-    "### This downloads image and text data into Colab\n",
+    "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
+    "### This downloads image and text data\n",
     "\n",
     "!mkdir -p ./data/images\n",
     "!mkdir -p ./data/text\n",
@@ -1190,6 +1190,16 @@
    "outputs": [],
    "source": [
     "table.drop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Take Our Survey\n",
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "Take the [Survey](https://delighted.com/t/dfAHRG9R)\n"
    ]
   }
  ],
