--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -71,8 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### !!! Only run this cell if running the notebook in Colab\n",
-    "### This downloads review data into Colab\n",
+    "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
+    "### This downloads customer review data\n",
     "!mkdir ./data \n",
     "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/sentiment_analysis/data/disneyland_reviews.csv"
    ]
