--- a/HuggingFace_search/huggingface_integration.ipynb
+++ b/HuggingFace_search/huggingface_integration.ipynb
@@ -435,9 +435,9 @@
         "Our table will have two columns the first `id` with a list of dummy ID's, the second will be the vector embeddings we will use for similarity search later on in this example.\n",
         "\n",
         "We will define our dimensionality, similarity metric and index type with the `vectorIndex` attribute. For this example we chose:\n",
-        "- `dims = 8` : In the next section, we generate embeddings that are eight-dimensional to match this. You can chose any value here.\n",
+        "- `dims = 384` : In the next section, we generate embeddings that are 384-dimensional to match this. The number of dimensions should mirror the output dimensions of your embedding model.\n",
         "- `metric = L2` : We chose [L2/Euclidean distance](https://en.wikipedia.org/wiki/Euclidean_distance). Our dummy dataset is low dimensional which Euclidean distance is suitable for. You have the choice of using other metrics here like [IP/Inner Product](https://en.wikipedia.org/wiki/Inner_product_space) and [CS/Cosine Similarity](https://en.wikipedia.org/wiki/Cosine_similarity) and the one you chose depends on the specific context and nature of your data.\n",
-        "- `type = flat` : We use a [Flat index](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexFlat.html) here as we have a simple data structure so this is more than adequate. You have the choice of using other indexes like [HNSW](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexHNSW.html) and [IVFPQ](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexIVFPQ.html) here, as with metrics the one you chose depends your data and your overall performance requirements.\n"
+        "- `type = hnsw` : [HNSW](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexHNSW.html) enhances efficiency while maintaining accuracy. You have the choice of using other indexes like  and [IVFPQ](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexIVFPQ.html) and a [Flat index](https://faiss.ai/cpp_api/struct/structfaiss_1_1IndexFlat.html) here, as with metrics the one you chose depends your data and your overall performance requirements.\n"
       ]
     },
     {
@@ -1575,11 +1575,6 @@
       },
       "source": [
         "## 6. Delete the KDB.AI Table to Conserve Resources\n",
-        "\n",
-        "\n",
-        "```\n",
-        "# This is formatted as code\n",
-        "```\n",
         "\n",
         "\n",
         "We can use `table.drop()` to delete a table."
