general sample updates

--- a/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
+++ b/TSS_transformed/Temporal_Similarity_Search_Transformed_Demo.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Set up KDB.AI endpoing and API key\n",
+    "#Set up KDB.AI endpoint and API key\n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
