--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -687,7 +687,7 @@
     }
    ],
    "source": [
-    "#Set up KDB.AI endpoing and API key\n",
+    "#Set up KDB.AI endpoint and API key\n",
     "KDBAI_ENDPOINT = (\n",
     "    os.environ[\"KDBAI_ENDPOINT\"]\n",
     "    if \"KDBAI_ENDPOINT\" in os.environ\n",
