drop table on completion

--- a/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
+++ b/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
@@ -206,7 +206,7 @@
         }
       ],
       "source": [
-        "#Set up KDB.AI endpoing and API key\n",
+        "#Set up KDB.AI endpoint and API key\n",
         "KDBAI_ENDPOINT = (\n",
         "    os.environ[\"KDBAI_ENDPOINT\"]\n",
         "    if \"KDBAI_ENDPOINT\" in os.environ\n",
@@ -852,6 +852,25 @@
         "\"\"\"\n",
         ")\n",
         "print(result.response)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Delete the KDB.AI Table\n",
+        "\n",
+        "Once finished with the table, it is best practice to drop it."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b6d07450",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "table.drop()"
       ]
     },
     {
