updated readme & LlamaIndex samples

--- a/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
+++ b/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
@@ -259,7 +259,7 @@
       },
       "outputs": [],
       "source": [
-        "session = kdbai.Session()"
+        "#session = kdbai.Session()"
       ]
     },
     {
@@ -852,6 +852,26 @@
         "\"\"\"\n",
         ")\n",
         "print(result.response)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e6604ca0",
+      "metadata": {},
+      "source": [
+        "## Delete the KDB.AI Table\n",
+        "\n",
+        "Once finished with the table, it is best practice to drop it."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8e1be781",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "table.drop()"
       ]
     },
     {
